remove "width: 100vw" to avoid overflow

--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -6,7 +6,6 @@ body {
 }
 .NavBar-overall {
   height: 40px;
-  width: 100vw;
   background-color: #2a546f;
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.5);
   display: flex;
